syntax = "proto3";
import "api/proto/team/TeamInfo.proto";

package cloud.lianmi.im.team;
option go_package = "github.com/lianmi/servers/api/proto/team";

//
//创建普通群/创建群-请求
message CreateTeamReq {
    string creator = 1;
    string owner = 2;
    //群组类型
    //是否必须：是
    TeamType type = 3;

    //群名称
    string teamName = 4;

    //入群校验方式
    //是否必须：是
    VerifyType verifyType = 5;

    //邀请用户入群前是否需要管理员同意
    //Check - 需管理员同意才能邀请用户入群  
    InviteMode inviteMode = 6;
}
//
//创建普通群/创建群-响应
message CreateTeamRsp {
    //群组信息
    //是否必须：是
    TeamInfo teamInfo = 1;
 
}

//
//获取群成员信息-响应
//权限说明
//普通群/高级群时： 根据timetag增量返回所有群成员
//群组：timetag固定取值0，只能拉取部分成员列表，包括群主、管理员和部分成员。
message Tmember {
    //群组ID
    string teamId = 1;

    //用户账号id
    string username = 2;

    //邀请者用户账号id, 如果是空则是用户主动加群
    string invitedusername = 3;

    // 用户本来的昵称
    string nick = 4;

    //群昵称
    string aliasName = 5;

    //群成员头像
    string avatar = 6;

    //群成员标签
    string label = 7;

    //群成员来源,如：PC、SHARE、SEARCH、IOS等,
    //UI可以根据该字段动态显示该成员来源,例: "abc邀请cde加入群组"
    string source = 8;

    //成员类型
    //是否必须-是
    TeamMemberType type = 9;

    //群消息通知方式
    NotifyType notifyType = 10;

    //是否被禁言
    bool mute = 11;

    //扩展字段
    string ex = 12;

    //入群时间，unix时间戳
    fixed64 joinTime = 13;

    //最近更新时间，unix时间戳
    fixed64 updateTime = 14;
}

enum MemberStatus {
    MemStatus_Undefined = 0;
    //启用
    MemStatus_Enabled = 1;
    //禁用
    MemStatus_Disabled = 2;
}